[gd_scene load_steps=8 format=3 uid="uid://da5t83ys3gjlx"]

[ext_resource type="Script" path="res://scripts/lvl_menu.gd" id="1_d3p8g"]
[ext_resource type="Texture2D" uid="uid://cylc0jeuu8lgd" path="res://pictures/bg.webp" id="1_hrt6u"]
[ext_resource type="Texture2D" uid="uid://d20jhfhrg8ms3" path="res://map/hell-background-eggq0xomzeclv9om.jpg" id="3_qmoax"]
[ext_resource type="Texture2D" uid="uid://b1071c3pbh3jq" path="res://map/sky_backgroundjpg.jpg" id="5_qgv4j"]
[ext_resource type="Texture2D" uid="uid://bxaycpluswq2y" path="res://map/alicia-magistrello-basic-cave.jpg" id="5_uo100"]
[ext_resource type="Texture2D" uid="uid://q0fd478plx2n" path="res://collectable/gem.png" id="6_y37ui"]

[sub_resource type="GDScript" id="GDScript_skkmn"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="lvl_menu" type="Node"]
script = ExtResource("1_d3p8g")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 2.0
offset_right = 2450.0
offset_bottom = 1310.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_hrt6u")
metadata/_edit_use_anchors_ = true

[node name="main_menu" type="Button" parent="."]
modulate = Color(1, 0.315719, 0.791177, 1)
offset_left = 39.0
offset_top = 33.0
offset_right = 145.0
offset_bottom = 78.0
text = "Main Menu"

[node name="LEVEL1" type="TextureRect" parent="."]
z_as_relative = false
offset_left = 177.0
offset_top = 143.0
offset_right = 355.0
offset_bottom = 243.0
texture = ExtResource("3_qmoax")
expand_mode = 1

[node name="lvl1" type="Button" parent="LEVEL1"]
offset_right = 178.0
offset_bottom = 99.0

[node name="Label" type="Label" parent="LEVEL1/lvl1"]
layout_mode = 0
offset_left = 51.0
offset_top = -36.0
offset_right = 127.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 30
text = "LVL 1"

[node name="LEVEL2" type="TextureRect" parent="."]
z_as_relative = false
offset_left = 409.0
offset_top = 142.0
offset_right = 587.0
offset_bottom = 242.0
texture = ExtResource("5_uo100")
expand_mode = 1

[node name="lvl2" type="Button" parent="LEVEL2"]
offset_top = 3.0
offset_right = 178.0
offset_bottom = 101.0
script = SubResource("GDScript_skkmn")

[node name="Label" type="Label" parent="LEVEL2/lvl2"]
layout_mode = 0
offset_left = 52.0
offset_top = -40.0
offset_right = 128.0
offset_bottom = 2.0
theme_override_font_sizes/font_size = 30
text = "LVL 2"

[node name="LEVEL3" type="TextureRect" parent="."]
z_as_relative = false
offset_left = 641.0
offset_top = 144.0
offset_right = 820.0
offset_bottom = 242.0
texture = ExtResource("5_qgv4j")
expand_mode = 1

[node name="lvl3" type="Button" parent="LEVEL3"]
offset_right = 178.0
offset_bottom = 99.0
script = SubResource("GDScript_skkmn")

[node name="Label" type="Label" parent="LEVEL3/lvl3"]
layout_mode = 0
offset_left = 52.0
offset_top = -38.0
offset_right = 128.0
offset_bottom = 4.0
theme_override_font_sizes/font_size = 30
text = "LVL 3"

[node name="LEVEL4" type="TextureRect" parent="."]
z_as_relative = false
texture_filter = 1
offset_left = 888.0
offset_top = 145.0
offset_right = 1066.0
offset_bottom = 242.0
texture = ExtResource("6_y37ui")
expand_mode = 1

[node name="lvl4" type="Button" parent="LEVEL4"]
offset_left = 1.0
offset_top = -1.0
offset_right = 179.0
offset_bottom = 97.0
script = SubResource("GDScript_skkmn")

[node name="Label" type="Label" parent="LEVEL4/lvl4"]
layout_mode = 0
offset_left = 53.0
offset_top = -36.0
offset_right = 129.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 30
text = "LVL 4"

[connection signal="pressed" from="main_menu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LEVEL1/lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="LEVEL2/lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="LEVEL3/lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="LEVEL4/lvl4" to="." method="_on_lvl_4_pressed"]
